--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@prisma/client": "^3.13.0",
     "axios": "^0.27.1",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.7",
     "ejs-mate": "^3.0.0",
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "prisma": "^3.13.0"
